--- a/src/zenit/ui/Main.fxml
+++ b/src/zenit/ui/Main.fxml
@@ -19,10 +19,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 
-
-<VBox prefHeight="600.0" prefWidth="900.0" stylesheets="@mainStyle.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="600.0" prefWidth="900.0" stylesheets="@mainStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -83,15 +83,15 @@
                                     	  <TabPane fx:id="tabPane" accessibleRole="PARENT" prefHeight="549.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                           <HBox alignment="TOP_RIGHT" fillHeight="false" layoutX="555.0" layoutY="4.0" prefHeight="22.0" prefWidth="112.0" snapToPixel="false" spacing="2.0" AnchorPane.rightAnchor="0.0">
                                              <children>
-                                                <Button id="btnRun" fx:id="btnRun" alignment="CENTER" contentDisplay="CENTER" ellipsisString="Run" mnemonicParsing="false" onAction="#compileAndRun" prefHeight="13.0" prefWidth="50.0" text="Run">
-                                                  <font>
-                                                      <Font size="10.0" />
-                                                   </font>
+                                                <Button id="btnRun" fx:id="btnRun" alignment="CENTER" contentDisplay="CENTER" ellipsisString="Run" mnemonicParsing="false" onAction="#compileAndRun" prefHeight="13.0" prefWidth="50.0">
+                                                   <graphic>
+                                                      <FontIcon iconLiteral="fa-play-circle-o" iconSize="18" iconColor="black"/>
+                                                   </graphic>
                                                 </Button>
-                                                <Button fx:id="btnStop" mnemonicParsing="false" prefHeight="13.0" prefWidth="50.0" text="Stop">
-                                                   <font>
-                                                      <Font size="10.0" />
-                                                   </font>
+                                                <Button fx:id="btnStop" mnemonicParsing="false" prefHeight="13.0" prefWidth="50.0">
+                                                   <graphic>
+                                                      <FontIcon iconLiteral="fa-stop-circle-o" iconSize="18" iconColor="black"/>
+                                                   </graphic>
                                                 </Button>
                                              </children>
                                           </HBox>
