--- a/src/zenit/ui/mainStyle.css
+++ b/src/zenit/ui/mainStyle.css
@@ -1,4 +1,13 @@
 
 #btnRun{
 		/* TODO: Add styling and icons*/
+		-fx-background-color:transparent;
 }
+
+
+#btnStop{
+	-fx-background-color:transparent;	
+}
+/* #iconRun{
+	-fx-icon-color: rgb(0,200,0);
+} */
