--- a/src/zenit/ui/mainStyle.css
+++ b/src/zenit/ui/mainStyle.css
@@ -1,13 +1,178 @@
+.root {
+	-fx-focus-color: transparent;
+	-fx-border-width: 0;
+}
 
 #btnRun{
-		/* TODO: Add styling and icons*/
-		-fx-background-color:transparent;
+	/* TODO: Add styling and icons*/
+	-fx-background-color:transparent;
 }
 
 
 #btnStop{
-	-fx-background-color:transparent;	
+	-fx-background-color:transparent;
 }
+
+#menuBar {
+	-fx-border-color: #000;
+	-fx-border-width: 0 0 1px 0;
+	-fx-border-style: solid;
+	-fx-use-system-menu-bar: true;
+}
+
+#menuBar, #menuBar * {
+	-fx-background-color: #444;
+	-fx-text-fill: #fff;
+}
+
+.menu {
+	-fx-fill: #fff;
+}
+
+#splitPane {
+	-fx-background-color: #999;
+	-fx-border-width: 0;
+	-fx-padding: 0;
+}
+
+#textEditorScrollPane {
+	-fx-border-width: 0;
+	-fx-padding: 0;
+}
+
+#tabPane {
+	-fx-background-color: #444;
+	-fx-fill: #fff;
+	-fx-border-width: 0;
+	-fx-padding: 0;
+}
+
+#treeView {
+	-fx-border-width: 0;
+	-fx-padding: 0;
+}
+
+#treeView * {
+	-fx-background-color: #444;
+	-fx-fill: #fff;
+}
+
+#treeView .arrow  {
+	-fx-background-color: #fff;
+}
+
+.split-pane:horizontal > .split-pane-divider {
+   -fx-background-color: #1e1e1e;
+}
+.split-pane:vertical > .split-pane-divider {
+   -fx-background-color: #1e1e1e;
+}
+
+.split-pane > .split-pane-divider {  
+    -fx-padding: 0.05em;
+    -fx-border: none;
+} 
+
+.split-pane {
+    -fx-background-insets: 0, 0;
+    -fx-padding: 0;
+ }
+ 
+ .split-pane > * > .split-pane {
+    -fx-background-insets: 0, 0;
+    -fx-padding: 0;
+ }
+ 
+ 
+ .tree-cell:hover {
+	-fx-background-color: #44444488;
+ }
+ 
+ #treeView .thumb {
+ 	-fx-background-color: #EEEEEEAA;
+ }
+ 
+ #treeView .thumb:hover, #treeView .thumb:pressed {
+ 	-fx-background-color: #EEE;
+ }
+ 
+ #treeView .increment-button, #treeView .decrement-button {
+ 	-fx-background-color:transparent;
+	-fx-background-radius: 0em;
+	-fx-padding:0 0 10 0;
+ }
+ 
+ .scroll-bar:vertical .increment-arrow, .decrement-arrow {
+ 	-fx-shape: " ";
+ 	-fx-padding: 0;
+ }
+ 
+ .scroll-bar:vertical {
+    -fx-pref-width: 14;
+    -fx-padding: 3;
+}
+
+.scroll-bar:increment-button {
+	-fx-background-color: green;
+}
+
+#tabPane .tab-header-area .tab-header-background {
+	-fx-background-color: #333;
+}
+
+#tabPane * {
+	-fx-border: 0;
+}
+
+#tabPane .tab {
+	-fx-background-color: #44444488;
+}
+
+#tabPane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
+    -fx-border-color: transparent;
+}
+
+#tabPane .tab .tab-label {
+	-fx-text-fill: #fff;
+}
+
+#tabPane .tab:selected {
+	-fx-background-color: #444;
+}
+
+#tabPane .tab-content-area * {
+	-fx-background-color: #444;
+}
+
+#consolePane {
+	-fx-text-fill: #fff;
+}
+
+#consolePane .title {
+	-fx-background-color: #333;
+	-fx-text-fill: #fff;
+	-fx-border-radius: 0;
+}
+
+#consolePane .content {
+	-fx-background-color: #444;
+	-fx-border-width: 0;
+	-fx-border-color: transparent;
+}
+
+#consolePane .content * {
+	-fx-text-fill: #fff;
+	-fx-fill: #fff;
+	-fx-border-width: 0;
+	-fx-padding: 0;
+}
+
+#HBox, #HBox * {
+	-fx-background-color: #222;
+	-fx-fill: #ccc;
+	-fx-border-width: 0;
+}
+
 /* #iconRun{
 	-fx-icon-color: rgb(0,200,0);
 } */
