--- a/src/zenit/ui/Main.fxml
+++ b/src/zenit/ui/Main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -21,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<VBox prefHeight="640.0" prefWidth="900.0" stylesheets="@mainStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="640.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -37,8 +38,12 @@
             <MenuItem mnemonicParsing="false" text="Save As…" />
             <MenuItem mnemonicParsing="false" text="Revert" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-                  <MenuItem fx:id="changeWorkspace" mnemonicParsing="false" onAction="#changeWorkspace" text="Change workspace" />
+            <Menu mnemonicParsing="false" text="Preferences…">
+	            <items>
+                	<CheckMenuItem fx:id="cmiDarkMode" mnemonicParsing="false" onAction="#darkModeChanged" selected="true" text="Dark Mode" />
+	            </items>
+            </Menu>
+            <MenuItem fx:id="changeWorkspace" mnemonicParsing="false" onAction="#changeWorkspace" text="Change workspace" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" text="Quit" />
           </items>
@@ -64,7 +69,7 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.2506" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" fx:id="splitPane">
+    <SplitPane fx:id="splitPane" dividerPositions="0.2506" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
         <AnchorPane SplitPane.resizableWithParent="false">
                <children>
@@ -92,7 +97,7 @@
                                                       <Insets top="1.0" />
                                                    </padding>
                                                 </Button>
-                                                <Button id="btnStop" fx:id="btnStop" mnemonicParsing="false" prefHeight="0.0" prefWidth="15.0" onMouseEntered="#onMouseEvent" onMouseExited="#onMouseEvent">
+                                                <Button id="btnStop" fx:id="btnStop" mnemonicParsing="false" onMouseEntered="#onMouseEvent" onMouseExited="#onMouseEvent" prefHeight="0.0" prefWidth="15.0">
                                                    <graphic>
                                                       <FontIcon fx:id="iconStop" iconColor="darkred" iconLiteral="fa-stop-circle" iconSize="24" />
                                                    </graphic>
@@ -106,16 +111,7 @@
                                     </AnchorPane>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                        <children>
-                                          <TitledPane alignment="TOP_RIGHT" 
-                                          			  animated="false" 
-                                          			  fx:id="consolePane"
-                                          			  collapsible="false" 
-                                          			  contentDisplay="RIGHT" 
-                                          			  text="Console" 
-                                          			  AnchorPane.bottomAnchor="0.0" 
-                                          			  AnchorPane.leftAnchor="0.0" 
-                                          			  AnchorPane.rightAnchor="0.0" 
-                                          			  AnchorPane.topAnchor="0.0">
+                                          <TitledPane fx:id="consolePane" alignment="TOP_RIGHT" animated="false" collapsible="false" contentDisplay="RIGHT" text="Console" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <content>
                                                 <ScrollPane fitToHeight="true" fitToWidth="true">
                                                    <content>
@@ -124,10 +120,13 @@
                                                 </ScrollPane>
                                              </content>
                                              <graphic>
-                                                <Button mnemonicParsing="false" onAction="#clearConsole" prefHeight="12.0" prefWidth="54.0" text="Clear">
-                                                   <font>
-                                                      <Font size="8.0" />
-                                                   </font>
+                                                <Button id="btnClearConsole" fx:id="btnClearConsole" mnemonicParsing="false" onAction="#clearConsole" prefHeight="0.0" prefWidth="15.0">
+                                                   <graphic>
+                                                      <FontIcon fx:id="iconStop" iconColor="darkgray" iconLiteral="fa-times" iconSize="12" />
+                                                   </graphic>
+                                                   <padding>
+                                                      <Insets top="1.0" />
+                                                   </padding>
                                                 </Button>
                                              </graphic>
                                           </TitledPane>
@@ -143,7 +142,7 @@
             </AnchorPane>
       </items>
     </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="900.0" spacing="5.0" VBox.vgrow="NEVER" fx:id="statusBar">
+    <HBox id="HBox" fx:id="statusBar" alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="900.0" spacing="5.0" VBox.vgrow="NEVER">
       <children>
         <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
           <font>
