--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -23,8 +23,9 @@
             </Label>
             <ChoiceBox fx:id="consoleChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0" />
             <ChoiceBox fx:id="terminalChoiceBox" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="buttonNewConsole" mnemonicParsing="false" onMouseClicked="#startNewConsole" style="-fx-background-color: rgba(255,255,255,0);" text="newConsoel" AnchorPane.leftAnchor="180.0" />
-            <Label fx:id="buttonNewTerminal" layoutX="293.0" layoutY="5.0" onMouseClicked="#newTerminal" text="new" />
+            <Button fx:id="buttonNewConsole" layoutX="181.0" mnemonicParsing="false" onMouseClicked="#startNewConsole" style="-fx-background-color: rgba(255,255,255,0);" text="new console" AnchorPane.leftAnchor="181.0" />
+            <Label fx:id="buttonNewTerminal" layoutX="293.0" layoutY="5.0" onMouseClicked="#newTerminal" text="new terminal" />
+            <Button fx:id="btnClear" layoutX="540.0" mnemonicParsing="false" onMouseClicked="#clearConsole" style="-fx-background-color: transparent;" text="clear" />
          </children>
       </AnchorPane>
    </children>
