--- a/src/main/resources/zenit/ui/Main.fxml
+++ b/src/main/resources/zenit/ui/Main.fxml
@@ -120,7 +120,11 @@
 												</AnchorPane>
 												<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="269.0" prefWidth="667.0">
 													<children>
-														<AnchorPane fx:id="consolePane" prefHeight="269.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+														<AnchorPane fx:id="consolePane" prefHeight="269.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
+															<children>
+																<fx:include source="/zenit/console/ConsolePane.fxml" fx:id="console"></fx:include>
+															</children>
+														</AnchorPane>
 													</children>
 												</AnchorPane>
 											</items>
