--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane  fx:controller="main.java.zenit.console.ConsoleController" prefHeight="300.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="300.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.zenit.console.ConsoleController">
    <children>
       <AnchorPane fx:id="consoleAnchor" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
       <AnchorPane minHeight="20.0" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: ddd;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -21,11 +22,18 @@
                   <Font size="12.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="consoleChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0" />
-            <ChoiceBox fx:id="terminalChoiceBox" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0" />
+            <ChoiceBox fx:id="consoleChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefWidth="90.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <ChoiceBox fx:id="terminalChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefWidth="90.0" style="-fx-background-color: rgba(255,255,255,0);" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <!-- <opaqueInsets>
+                  <Insets />
+               </opaqueInsets> -->
+               </ChoiceBox>
             <Button fx:id="buttonNewConsole" layoutX="181.0" mnemonicParsing="false" onMouseClicked="#startNewConsole" style="-fx-background-color: rgba(255,255,255,0);" text="new console" AnchorPane.leftAnchor="181.0" />
             <Label fx:id="buttonNewTerminal" layoutX="293.0" layoutY="5.0" onMouseClicked="#newTerminal" text="new terminal" />
-            <Button fx:id="btnClear" layoutX="540.0" mnemonicParsing="false" onMouseClicked="#clearConsole" style="-fx-background-color: transparent;" text="clear" />
+            <Button fx:id="btnClear" layoutX="500.0" mnemonicParsing="false" onMouseClicked="#clearConsole" style="-fx-background-color: transparent;" text="clear" AnchorPane.rightAnchor="158.4">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></Button>
          </children>
       </AnchorPane>
    </children>
