--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -28,8 +28,8 @@
                   <Insets />
                </opaqueInsets> -->
                </ChoiceBox>
-            <Button fx:id="buttonNewConsole" layoutX="181.0" mnemonicParsing="false" onMouseClicked="#startNewConsole" style="-fx-background-color: rgba(255,255,255,0);" text="new console" AnchorPane.leftAnchor="181.0" />
-            <Label fx:id="buttonNewTerminal" layoutX="293.0" layoutY="5.0" onMouseClicked="#newTerminal" text="new terminal" />
+            <Button fx:id="btnNewConsole" layoutX="181.0" mnemonicParsing="false" onMouseClicked="#startNewConsole" style="-fx-background-color: rgba(255,255,255,0);" text="new console" AnchorPane.leftAnchor="181.0" />
+            <Button fx:id="btnNewTerminal" layoutX="181.0" mnemonicParsing="false" onMouseClicked="#newTerminal" style="-fx-background-color: rgba(255,255,255,0);" text="new terminal" AnchorPane.leftAnchor="181.0"/>
             <Button fx:id="btnClear" layoutX="500.0" mnemonicParsing="false" onMouseClicked="#clearConsole" style="-fx-background-color: transparent;" text="clear" AnchorPane.rightAnchor="158.4">
                <opaqueInsets>
                   <Insets />
