--- a/src/main/resources/zenit/ui/Main.fxml
+++ b/src/main/resources/zenit/ui/Main.fxml
@@ -21,6 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <fx:root type="VBox" prefHeight="640.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
@@ -89,27 +90,35 @@
                                     	  <TabPane fx:id="tabPane" accessibleRole="PARENT" prefHeight="549.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                           <HBox alignment="TOP_RIGHT" fillHeight="false" layoutX="555.0" layoutY="4.0" prefHeight="22.0" prefWidth="112.0" snapToPixel="false" spacing="2.0" AnchorPane.rightAnchor="0.0">
                                              <children>
-                                                <Region fx:id="runRegion" minHeight="20" minWidth="20" opacity="1" prefHeight="24.0" prefWidth="35.0" style="-fx-scale-shape: true;" styleClass="btn-run" stylesheets="@actionButtons.css">
-                                                   <HBox.margin>
-                                                      <Insets right="10.0" />
-                                                   </HBox.margin>
-                                                </Region>
-                                                <Button id="btnRun" fx:id="btnRun" alignment="CENTER"> <!--  contentDisplay="CENTER" ellipsisString="Run" mnemonicParsing="false"  onAction="#compileAndRun" onMouseEntered="#onMouseEvent" onMouseExited="#onMouseEvent" prefHeight="0.0" prefWidth="15.0">  -->
-                                               
-                                                   <padding>
-                                                      <Insets top="1.0" />
-                                                   </padding>
-                                                </Button>
-                                                <Button id="btnStop" fx:id="btnStop" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0"> <!--  onMouseEntered="#onMouseEvent" onMouseExited="#onMouseEvent" prefHeight="0.0" prefWidth="15.0"> -->
-                                                  
+                                                <Button mnemonicParsing="false"
+											            prefWidth="20.0"
+											            prefHeight="20.0"
+											            minWidth="20.0"
+											            minHeight="20.0"
+											            fx:id="btnRun"
+											            id="btnRun"
+											            alignment="CENTER">
+										            <padding>
+										            	<Insets top="1.0"/>
+										            </padding>
+											        
+											        <graphic>
+											            <FontIcon iconLiteral="fa-play" iconColor="green" iconSize="24"/>
+											        </graphic>
+											    </Button>
+                                                
+                                                <Button id="btnStop" 
+                                                		fx:id="btnStop" 
+                                                		minHeight="20.0" 
+                                                		minWidth="20.0" 
+                                                		mnemonicParsing="false" 
+                                                		prefHeight="20.0" 
+                                                		prefWidth="20.0"> <!--  onMouseEntered="#onMouseEvent" onMouseExited="#onMouseEvent" prefHeight="0.0" prefWidth="15.0"> -->  
                                                    <padding>
                                                       <Insets top="1.0" />
                                                    </padding>
                                                    <graphic>
-                                                      <Region minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="20.0" styleClass="btn-stop" stylesheets="@actionButtons.css">
-                                                         <opaqueInsets>
-                                                            <Insets />
-                                                         </opaqueInsets></Region>
+                                                      <FontIcon iconLiteral="fa-stop" iconColor="red" iconSize="24"/>
                                                    </graphic>
                                                 </Button>
                                              </children>
