--- a/src/main/resources/zenit/ui/Main.fxml
+++ b/src/main/resources/zenit/ui/Main.fxml
@@ -103,7 +103,10 @@
 										            </padding>
 											        
 											        <graphic>
-											            <FontIcon iconLiteral="fa-play" iconColor="green" iconSize="24"/>
+											            <FontIcon fx:id="iconRun" 
+											            		  iconLiteral="fa-play-circle" 
+											            		  iconColor="green" 
+											            		  iconSize="24"/>
 											        </graphic>
 											    </Button>
                                                 
@@ -118,7 +121,10 @@
                                                       <Insets top="1.0" />
                                                    </padding>
                                                    <graphic>
-                                                      <FontIcon iconLiteral="fa-stop" iconColor="red" iconSize="24"/>
+                                                      <FontIcon fx:id="iconStop" 
+                                                      			iconLiteral="fa-stop-circle" 
+                                                      			iconColor="red" 
+                                                      			iconSize="24"/>
                                                    </graphic>
                                                 </Button>
                                              </children>
@@ -157,7 +163,7 @@
     </SplitPane>
     <HBox id="HBox" fx:id="statusBar" alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="900.0" spacing="5.0" VBox.vgrow="NEVER">
       <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
+        <Label fx:id="statusBarLeftLabel" id="statusBarLeftLabel" maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
           <font>
             <Font size="11.0" fx:id="x3" />
           </font>
@@ -166,7 +172,7 @@
           </textFill>
         </Label>
         <Pane HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
+        <Label fx:id="statusBarRightLabel" id="statusBarRightLabel" font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
       </children>
       <padding>
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
